Extend Gradle test task