@@ -36,6 +36,23 @@ subprojects {
         options.compilerArgs << "-Xlint:unchecked"
     }
 
+	test {
+		// required by jmockit
+		jvmArgs += '-Djdk.attach.allowAttachSelf'
+
+		testLogging {
+			events "passed", "skipped", "failed"
+
+			afterSuite { desc, result ->
+				if (!desc.parent) {
+					println "Tests run: ${result.testCount}, " +
+						"Failures: ${result.failedTestCount}, " +
+						"Skipped: ${result.skippedTestCount}"
+				}
+			}
+		}
+	}
+
     // integration test
     def testSrcDir = file('src/integrationtest/java')
     def testResourceDir = file('src/integrationtest/resources')
